Interfaçage de la fonctionnalité Task. Niveau d'évolution 80%

--- a/Todo_List_ASPNETCore.csproj
+++ b/Todo_List_ASPNETCore.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Task\**" />
+    <Compile Remove="Views\**" />
+    <Content Remove="Pages\Task\**" />
+    <Content Remove="Views\**" />
+    <EmbeddedResource Remove="Pages\Task\**" />
+    <EmbeddedResource Remove="Views\**" />
+    <None Remove="Pages\Task\**" />
+    <None Remove="Views\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.30" />
@@ -15,11 +26,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Optivem.Framework.Infrastructure.FluentValidation" Version="1.0.23" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\Task\Index.cshtml" />
   </ItemGroup>
 
 </Project>
