Interfaçage complet - Task 100% - Dashboard - Notification

--- a/Todo_List_ASPNETCore.csproj
+++ b/Todo_List_ASPNETCore.csproj
@@ -32,11 +32,14 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Views\Task\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\Task\Dashboard.cshtml" />
   </ItemGroup>
 
 </Project>
