--- a/appsettings.json
+++ b/appsettings.json
@@ -17,12 +17,12 @@
   },
 
   "SmtpSettings": {
-    "Server": "smtp.office365.com",
+    "Server": "smtp.your-email-provider.com",
     "Port": 587,
-    "SenderName": "Todo_List_ASPNETCore",
-    "SenderEmail": "guy.kpogno@cergibs.com",
-    "Username": "CERGI Guy KPOGNO",
-    "Password": "Cergi@2021"
+    "SenderName": "Your App Name",
+    "SenderEmail": "your-email@example.com",
+    "Username": "your-email@example.com",
+    "Password": "your-email-password"
   },
 
   "AllowedHosts": "*"
